# test2

./: .gitignore  CMakeLists.txt  README.md  editor.c  qmake-test2.pro  sonar-project.properties
.github/workflows/: test-action.yml
docs/: tests.md
editor/: CMakeLists.txt  common.h  editor.c  editor.pro  load.c  save.c  shownum.c
tests/: CMakeLists.txt  main.cpp  tests.h  tests.pro
text/: CMakeLists.txt  append_line.c  create_text.c  move_crsr_r.c  process_forward.c  remove_all.c  remove_first_line.c  text.h  text.pro
